# online_courses

./: .env.sample  .gitignore  Dockerfile  coverage.txt  docker-compose.yml  manage.py  pyproject.toml
courses/: models.py  pagination.py  permissions.py  tasks.py  tests.py  urls.py  validators.py
courses/management/commands/: fill_payments.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_video_link.py  0003_alter_course_options_alter_lesson_options_and_more.py  0004_payment.py  0005_alter_payment_course_alter_payment_lesson.py  0006_alter_payment_user.py  0007_course_owner_lesson_owner.py  0008_subscription.py  0009_alter_subscription_user.py  0010_rename_user_subscription_owner.py  0011_alter_payment_user.py  0012_payment_client_secret.py  0013_course_updated_at.py
courses/serializers/: course.py  lesson.py  payment.py  subscription.py
courses/views/: course.py  lesson.py  payment.py  subscription.py
online_courses/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/managements/commands/: csu.py
users/migrations/: 0001_initial.py
